corrected wrapped group domain and category relative widths

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -61,11 +61,11 @@ div.widget {
 }
 
 div.widget:has(.group-domain) {
-  width: 100%;
+  width: 80%;
 }
 
 div.widget:has(.group-category) {
-  width: 100%;
+  width: 20%;
 }
 
 .fill {
